--- a/FRONTEND_PAYROLL/package.json
+++ b/FRONTEND_PAYROLL/package.json
@@ -22,6 +22,8 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@types/react": "^18.3.19",
     "@types/react-dom": "^18.3.5",
