--- a/FRONTEND_PAYROLL/package.json
+++ b/FRONTEND_PAYROLL/package.json
@@ -22,9 +22,13 @@
     "vite": "^6.2.0"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@types/react": "^18.3.19",
     "@types/react-dom": "^18.3.5",
     "class-variance-authority": "^0.7.1",
@@ -32,7 +36,9 @@
     "lucide-react": "^0.483.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.24.2"
   }
 }
