--- a/FRONTEND_PAYROLL/package.json
+++ b/FRONTEND_PAYROLL/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@tanstack/react-table": "^8.21.2",
     "@types/react": "^18.3.19",
     "@types/react-dom": "^18.3.5",
     "class-variance-authority": "^0.7.1",
@@ -38,6 +39,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.0",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
