Creacion de todas las entidades, configuracion de CORS, repositorio y controlador de Empleado

--- a/BACKEND_PAYROLL/src/main/resources/application.properties
+++ b/BACKEND_PAYROLL/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=BACKEND_PAYROLL
+spring.datasource.url=jdbc:postgresql://localhost:5432/hrms_db
+spring.datasource.username=db_admin
+spring.datasource.password=bd2_2025
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto=validate
