--- a/BACKEND_PAYROLL/src/main/resources/application.properties
+++ b/BACKEND_PAYROLL/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=BACKEND_PAYROLL
-spring.datasource.url=jdbc:postgresql://localhost:5432/hrms_db
+spring.datasource.url=jdbc:postgresql://192.168.0.106:5432/hrms_db
 spring.datasource.username=db_admin
 spring.datasource.password=bd2_2025
 
