--- a/FRONTEND_PAYROLL/package.json
+++ b/FRONTEND_PAYROLL/package.json
@@ -37,6 +37,7 @@
     "@tanstack/react-table": "^8.21.2",
     "@types/react": "^18.3.19",
     "@types/react-dom": "^18.3.5",
+    "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
