Implementacion de la logica para el envio de nominas por correo

--- a/BACKEND_PAYROLL/src/main/resources/application.properties
+++ b/BACKEND_PAYROLL/src/main/resources/application.properties
@@ -7,3 +7,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=validate
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=davidmrivasb2004@gmail.com
+spring.mail.password=dkoq ayzp nybx uvty
+spring.mail.port=587
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
