--- a/BACKEND_PAYROLL/pom.xml
+++ b/BACKEND_PAYROLL/pom.xml
@@ -76,6 +76,10 @@
             <version>8.0.2</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
