--- a/BACKEND_PAYROLL/src/main/resources/application.properties
+++ b/BACKEND_PAYROLL/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=validate
 
+spring.data.mongodb.uri=mongodb://192.168.1.85:27017/auditorias
+
+
 spring.mail.host=smtp.gmail.com
 spring.mail.username=davidmrivasb2004@gmail.com
 spring.mail.password=dkoq ayzp nybx uvty
