--- a/BACKEND_PAYROLL/src/main/resources/application.properties
+++ b/BACKEND_PAYROLL/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=BACKEND_PAYROLL
-#spring.datasource.url=jdbc:postgresql://192.168.0.106:5432/hrms_db
-spring.datasource.url=jdbc:postgresql://localhost:5432/hrms_db
+spring.datasource.url=jdbc:postgresql://192.168.0.106:5432/hrms_db
+#spring.datasource.url=jdbc:postgresql://localhost:5432/hrms_db
 spring.datasource.username=postgres
 spring.datasource.password=bd2_2025
 
@@ -9,7 +9,7 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.jpa.hibernate.ddl-auto=validate
 
-spring.data.mongodb.uri=mongodb://192.168.1.85:27017/auditorias
+#spring.data.mongodb.uri=mongodb://192.168.1.85:27017/auditorias
 
 
 spring.mail.host=smtp.gmail.com
